エラーメッセージを表示

--- a/src/main/webapp/user/register-user.xhtml
+++ b/src/main/webapp/user/register-user.xhtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <head>
         <meta charset="UTF-8" />
@@ -12,6 +13,11 @@
             <ui:define name="title">ユーザー登録</ui:define>
             <ui:define name="content">
                 <h1>ユーザー登録</h1>
+                
+                <h:messages globalOnly="true"
+                            styleClass="list-unstyled h3"
+                            infoClass="text-primary"
+                            errorClass="text-danger" />
 
                 <form jsf:id="form">
                     <div class="form-group">
