メニュー追加したり

--- a/src/main/webapp/system/login.xhtml
+++ b/src/main/webapp/system/login.xhtml
@@ -29,11 +29,10 @@
                     </div>
                     
                     <div class="form-group">
-                        <comp:textField id="password"
-                                        type="password"
-                                        label="パスワード"
-                                        value="#{loginBean.password}"
-                                        required="true" />
+                        <comp:password id="password"
+                                       label="パスワード"
+                                       value="#{loginBean.password}"
+                                       required="true" />
                     </div>
 
                     <input type="submit" class="btn btn-primary"
