--- a/src/main/webapp/user/user-list.xhtml
+++ b/src/main/webapp/user/user-list.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <head>
@@ -10,6 +11,9 @@
         <title>ユーザー一覧</title>
     </head>
     <body>
+        <f:metadata>
+            <f:viewAction action="#{userListBean.init()}" />
+        </f:metadata>
         <ui:composition template="/WEB-INF/template/template.xhtml">
             <ui:define name="title">ユーザー一覧</ui:define>
             <ui:define name="content">
@@ -19,7 +23,12 @@
                             styleClass="list-unstyled h3"
                             infoClass="text-primary"
                             errorClass="text-danger" />
-                
+
+                <ul>
+                    <ui:repeat value="#{userListBean.userList}" var="user">
+                        <li></li>
+                    </ui:repeat>
+                </ul>
             </ui:define>
         </ui:composition>
     </body>
