--- a/src/main/webapp/user/register-user.xhtml
+++ b/src/main/webapp/user/register-user.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <head>
@@ -15,8 +16,7 @@
             <ui:define name="content">
                 <h1>ユーザー登録</h1>
                 
-                <h:messages globalOnly="true"
-                            styleClass="list-unstyled h3"
+                <h:messages styleClass="list-unstyled h3"
                             infoClass="text-primary"
                             errorClass="text-danger" />
 
@@ -26,7 +26,8 @@
                                         label="ログインID"
                                         value="#{registerUserBean.loginId}"
                                         required="true"
-                                        maxlength="32" />
+                                        maxlength="32">
+                        </comp:textField>
                     </div>
 
                     <div class="form-group">
